--- a/Writer/writer.ipynb
+++ b/Writer/writer.ipynb
@@ -16,12 +16,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import data"
+    "### Parameters"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model\n",
+    "CHECKPOINT_DIR = './writer_checkpoints'\n",
+    "EMBEDDING_SIZE = 256\n",
+    "RNN_UNITS = 1024\n",
+    "\n",
+    "# training\n",
+    "DATA_DIR = \"bible_1000.txt\"\n",
+    "EPOCHS = 3\n",
+    "TIME_STEPS = 100\n",
+    "BATCH_SIZE = 32\n",
+    "BUFFER_SIZE = 10000\n",
+    "\n",
+    "# prediction\n",
+    "SEED_TEXT = \"Writer writes\"\n",
+    "WRITTEN_LEN = 300\n",
+    "TEMPERATURE = 1.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +91,7 @@
     }
    ],
    "source": [
-    "raw_data_chars, raw_data_ids, char_to_id, id_to_char = get_data(\"bible_1000.txt\")\n",
+    "raw_data_chars, raw_data_ids, char_to_id, id_to_char = get_data(DATA_DIR)\n",
     "n_chars = len(char_to_id)\n",
     "print(n_chars)"
    ]
@@ -85,22 +116,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the length of a sequence of an example's input or response\n",
-    "time_steps = 100\n",
-    "\n",
     "# create tf.Dataset object\n",
-    "dataset = tf.data.Dataset.from_tensor_slices(raw_data_ids)\n",
+    "raw_dataset = tf.data.Dataset.from_tensor_slices(raw_data_ids)\n",
     "\n",
     "# create examples\n",
     "# NOTE: the \"batch\" defined here is one example (batch of characters) instead of batch of examples\n",
-    "examples = dataset.batch(time_steps+1, drop_remainder=True)"
+    "examples = raw_dataset.batch(TIME_STEPS+1, drop_remainder=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Map data to inputs and responses"
+    "### Map (to inputs and responses), shuffle, and batch data"
    ]
   },
   {
@@ -114,25 +142,7 @@
     "    example_response = example[1:]\n",
     "    return example_input, example_response\n",
     "\n",
-    "mapped_dataset = examples.map(input_and_response)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Shuffle and create batches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BATCH_SIZE = 32\n",
-    "BUFFER_SIZE = 10000\n",
-    "shuffled_dataset = mapped_dataset.shuffle(BUFFER_SIZE).batch(BATCH_SIZE, drop_remainder=True)"
+    "dataset = examples.map(input_and_response).shuffle(BUFFER_SIZE).batch(BATCH_SIZE, drop_remainder=True)"
    ]
   },
   {
@@ -146,38 +156,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Parameters"
+    "### Set up model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dimension of embedding layer\n",
-    "emb_size = 256\n",
-    "\n",
-    "# number of rnn units\n",
-    "rnn_units = 1024\n",
-    "\n",
-    "# max number of iterations\n",
-    "iterations = 500\n",
-    "\n",
-    "# learning rate\n",
-    "learning_rate = 0.1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Set up RNN model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,8 +182,8 @@
     "\n",
     "model = build_model(\n",
     "    n_chars=n_chars, \n",
-    "    emb_size=emb_size,\n",
-    "    rnn_units=rnn_units,\n",
+    "    emb_size=EMBEDDING_SIZE,\n",
+    "    rnn_units=RNN_UNITS,\n",
     "    batch_size=BATCH_SIZE)"
    ]
   },
@@ -212,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,15 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Directory where the checkpoints will be saved\n",
-    "checkpoint_dir = './training_checkpoints'\n",
-    "\n",
     "# Name of the checkpoint files\n",
-    "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt_{epoch}\")\n",
+    "checkpoint_prefix = os.path.join(CHECKPOINT_DIR, \"ckpt_{epoch}\")\n",
     "\n",
     "checkpoint_callback=tf.keras.callbacks.ModelCheckpoint(\n",
     "    filepath=checkpoint_prefix,\n",
@@ -257,19 +238,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train model"
+    "### Execute training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "39/39 [==============================] - 102s 3s/step - loss: 3.0650\n",
+      "Epoch 1/3\n",
+      "39/39 [==============================] - 98s 3s/step - loss: 3.0675\n",
+      "Epoch 2/3\n",
+      "39/39 [==============================] - 106s 3s/step - loss: 2.4002\n",
+      "Epoch 3/3\n",
+      "39/39 [==============================] - 107s 3s/step - loss: 2.0471\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
@@ -288,9 +274,7 @@
     }
    ],
    "source": [
-    "EPOCHS=1\n",
-    "\n",
-    "history = model.fit(shuffled_dataset, epochs=EPOCHS, callbacks=[checkpoint_callback])\n",
+    "history = model.fit(dataset, epochs=EPOCHS, callbacks=[checkpoint_callback])\n",
     "\n",
     "model.summary()"
    ]
@@ -311,70 +295,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_1\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "embedding_1 (Embedding)      (1, None, 256)            15360     \n",
-      "_________________________________________________________________\n",
-      "unified_lstm_1 (UnifiedLSTM) (1, None, 1024)           5246976   \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (1, None, 60)             61500     \n",
-      "=================================================================\n",
-      "Total params: 5,323,836\n",
-      "Trainable params: 5,323,836\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = build_model(\n",
     "    n_chars=n_chars, \n",
-    "    emb_size=emb_size,\n",
-    "    rnn_units=rnn_units,\n",
+    "    emb_size=EMBEDDING_SIZE,\n",
+    "    rnn_units=RNN_UNITS,\n",
     "    batch_size=1)\n",
     "\n",
-    "model.load_weights(tf.train.latest_checkpoint(checkpoint_dir))\n",
+    "model.load_weights(tf.train.latest_checkpoint(CHECKPOINT_DIR))\n",
     "\n",
-    "model.build(tf.TensorShape([1, None]))\n",
-    "\n",
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Prepare seed text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eliel, and Obed, and Jasiel the Mesobaite. \n",
-      "Now these are they that came to David to Ziklag, while h\n"
-     ]
-    }
-   ],
-   "source": [
-    "seed_chars, _, _, _ = get_data(\"bible_seed.txt\")\n",
-    "seed_chars = seed_chars[:time_steps]\n",
-    "seed_sentence = \"\".join(seed_chars)\n",
-    "print(seed_sentence)"
+    "model.build(tf.TensorShape([1, None]))"
    ]
   },
   {
@@ -386,21 +319,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def writer(model, seed_text, written_len, temperature):\n",
+    "def writer(model, seed, length, temp):\n",
     "    \n",
     "    # convert seed text to id list\n",
-    "    input_ids = tf.expand_dims([char_to_id[c] for c in seed_text], 0)\n",
+    "    input_ids = tf.expand_dims([char_to_id[c] for c in seed], 0)\n",
     "    \n",
     "    # storage for written text\n",
-    "    written_text = []\n",
+    "    written = []\n",
     "    \n",
     "    model.reset_states()\n",
-    "    for k in range(written_len):\n",
-    "        pred = tf.squeeze(model(input_ids), 0) / temperature\n",
+    "    for k in range(length):\n",
+    "        pred = tf.squeeze(model(input_ids), 0) / temp\n",
     "\n",
     "        # predict the last id returned by the model\n",
     "        pred_id = tf.random.categorical(pred, num_samples=1)[-1, 0].numpy()\n",
@@ -408,29 +341,36 @@
     "        # pass predicted ids as the input of the next prediction\n",
     "        input_ids = tf.expand_dims([pred_id], 0)\n",
     "        \n",
-    "        written_text.append(id_to_char[pred_id])\n",
+    "        written.append(id_to_char[pred_id])\n",
     "        \n",
-    "    return (seed_text + \"\".join(written_text))"
+    "    return (seed + \"\".join(written))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Execute writing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BibleLlMdclnpAanr e  e,wbo Cn aandpeauweia , JIwe tR p,D a. nld t eeontotthuAnc s thi twf,thRrh  famalh  '"
+       "\"Writer writes, and hah saver hint. \\nAnd the tor pach, aid hesthint if uftome,. and sake sste dstonghey And bamethe the'l thins wid id: and the dOsey'dede? and they, and pkas cookerastis in su lim tulit outoves hithas an thi gheth madt themer. and soc upto tod pad, anse ture, hy wald is halbis antond ahlis ind he\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "writer(model, \"Bible\", 100, temperature=1.0)"
+    "writer(model, SEED_TEXT, WRITTEN_LEN, TEMPERATURE)"
    ]
   }
  ],
