--- a/Writer/writer.ipynb
+++ b/Writer/writer.ipynb
@@ -31,15 +31,15 @@
     "RNN_UNITS = 1024\n",
     "\n",
     "# training\n",
-    "DATA_DIR = \"bible_1000.txt\"\n",
-    "EPOCHS = 3\n",
-    "TIME_STEPS = 100\n",
-    "BATCH_SIZE = 32\n",
+    "DATA_DIR = \"bible.txt\"\n",
+    "EPOCHS = 1\n",
+    "TIME_STEPS = 200\n",
+    "BATCH_SIZE = 64\n",
     "BUFFER_SIZE = 10000\n",
     "\n",
     "# prediction\n",
-    "SEED_TEXT = \"Writer writes\"\n",
-    "WRITTEN_LEN = 300\n",
+    "SEED_TEXT = \"To be honest,\"\n",
+    "WRITTEN_LEN = 200\n",
     "TEMPERATURE = 1.0"
    ]
   },
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60\n"
+      "63\n"
      ]
     }
    ],
@@ -250,24 +250,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3\n",
-      "39/39 [==============================] - 98s 3s/step - loss: 3.0675\n",
-      "Epoch 2/3\n",
-      "39/39 [==============================] - 106s 3s/step - loss: 2.4002\n",
-      "Epoch 3/3\n",
-      "39/39 [==============================] - 107s 3s/step - loss: 2.0471\n",
+      "314/314 [==============================] - 1186s 4s/step - loss: 2.0175\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding (Embedding)        (32, None, 256)           15360     \n",
+      "embedding (Embedding)        (64, None, 256)           16128     \n",
       "_________________________________________________________________\n",
-      "unified_lstm (UnifiedLSTM)   (32, None, 1024)          5246976   \n",
+      "unified_lstm (UnifiedLSTM)   (64, None, 1024)          5246976   \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (32, None, 60)            61500     \n",
+      "dense (Dense)                (64, None, 63)            64575     \n",
       "=================================================================\n",
-      "Total params: 5,323,836\n",
-      "Trainable params: 5,323,836\n",
+      "Total params: 5,327,679\n",
+      "Trainable params: 5,327,679\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -361,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Writer writes, and hah saver hint. \\nAnd the tor pach, aid hesthint if uftome,. and sake sste dstonghey And bamethe the'l thins wid id: and the dOsey'dede? and they, and pkas cookerastis in su lim tulit outoves hithas an thi gheth madt themer. and soc upto tod pad, anse ture, hy wald is halbis antond ahlis ind he\""
+       "'To be honest, and the king of man and a san raifteres: there this meont beether, and gasto toly and therean. \\nWhen they hath that thather he shall closes us from the accod unto the lanon, Pene of go them. \\nEfter h'"
       ]
      },
      "execution_count": 13,
@@ -383,14 +378,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
